--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,11 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage", "tabs"]
+  "permissions": ["storage", "tabs"],
+  "icons": {
+    "16": "icons/sessionblock_icon_16.png",
+    "32": "icons/sessionblock_icon_32.png",
+    "48": "icons/sessionblock_icon_48.png",
+    "128": "icons/sessionblock_icon_128.png"
+  }
 }
