--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage", "tabs"],
+  "permissions": ["storage", "tabs", "history"],
   "icons": {
     "16": "icons/sessionblock_icon_16.png",
     "32": "icons/sessionblock_icon_32.png",
